Corrected the name and added the phone number to CV.

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 </head>
 <body>
 
-    <h1>Andrian MOREARESCO</h1>
+    <h1>Andrian MORARESCO</h1>
     <p>Email: a.moraresco@developmentaid.org</p>
-
+    <div>Telefon: 2233252</>
 </body>
 </html>
